<?xml version="1.0" encoding="utf-8"?>
<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
 <LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
   xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="30dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="#6CDCDC">

<!--    <ImageView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="300dp"-->
<!--        android:scaleType="fitXY"-->
<!--        android:src="@drawable/hanuman"-->
<!--        android:scrollbarSize="30dp"-->
<!--        android:contentDescription="Hanuman_Image"/>-->
<!--    <TextView-->
<!--      android:layout_width="wrap_content"-->
<!--      android:layout_height="wrap_content"-->
<!--        android:text="Hanuman"-->
<!--        android:textSize="40dp"-->
<!--        android:textColor="@color/white"-->
<!--        android:textStyle="bold"-->
<!--        android:layout_marginTop="10dp"/>-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Heading"
        android:layout_marginBottom="180dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        />

    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:ems="15"
        android:hint="@string/user_weight"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:id="@+id/user_weight"
        android:inputType="number"
        />
    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:ems="15"
        android:textColorHint="@color/black"
        android:hint="@string/user_heightF"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:id="@+id/user_heightf"
        android:inputType="number"
        />
    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:ems="15"
        android:textColorHint="@color/black"
        android:hint="@string/user_heightI"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:id="@+id/user_heighti"
        android:inputType="number"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Result_btn"
        android:id="@+id/Btn_result"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:id="@+id/result"/>

</LinearLayout>
    <!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:orientation="vertical"-->
<!--        android:gravity="center"-->
<!--        android:background="@android:color/holo_blue_bright">-->


<!--        <EditText-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="0"-->
<!--            android:id="@+id/res"-->
<!--            android:focusable="false"-->
<!--            android:ems="15"/>-->
<!--        <GridLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:rowCount="4"-->
<!--            android:columnCount="4"-->
<!--            android:padding="40dp"-->
<!--            android:layout_height="400dp">-->
<!--            <Button-->
<!--                android:layout_width="75dp"-->
<!--                android:layout_height="75dp"-->
<!--                android:text="1"-->
<!--                android:id="@+id/b1"/>-->
<!--            <Button-->
<!--                android:layout_width="75dp"-->
<!--                android:layout_height="75dp"-->
<!--                android:text="2"-->
<!--                android:id="@+id/b2"/>-->
<!--            <Button-->
<!--                android:layout_width="75dp"-->
<!--                android:layout_height="75dp"-->
<!--                android:text="3"-->
<!--                android:id="@+id/b3"/>-->
<!--            <Button-->
<!--                android:layout_width="75dp"-->
<!--                android:layout_height="75dp"-->
<!--                android:text="+"-->
<!--                android:id="@+id/badd"/>-->
<!--            <Button-->
<!--                android:layout_width="75dp"-->
<!--                android:layout_height="75dp"-->
<!--                android:text="4"-->
<!--                android:id="@+id/b4"/>-->
<!--            <Button-->
<!--                android:layout_width="75dp"-->
<!--                android:layout_height="75dp"-->
<!--                android:text="5"-->
<!--                android:id="@+id/b5"/>-->
<!--            <Button-->
<!--                android:layout_width="75dp"-->
<!--                android:layout_height="75dp"-->
<!--                android:text="6"-->
<!--                android:id="@+id/b6"/>-->
<!--            <Button-->
<!--                android:layout_width="75dp"-->
<!--                android:layout_height="75dp"-->
<!--                android:text="-"-->
<!--                android:id="@+id/bsub"/>-->
<!--            <Button-->
<!--                android:layout_width="75dp"-->
<!--                android:layout_height="75dp"-->
<!--                android:text="7"-->
<!--                android:id="@+id/b7"/>-->
<!--            <Button-->
<!--                android:layout_width="75dp"-->
<!--                android:layout_height="75dp"-->
<!--                android:text="8"-->
<!--                android:id="@+id/b8"/>-->
<!--            <Button-->
<!--                android:layout_width="75dp"-->
<!--                android:layout_height="75dp"-->
<!--                android:text="9"-->
<!--                android:id="@+id/b9"/>-->
<!--            <Button-->
<!--                android:layout_width="75dp"-->
<!--                android:layout_height="75dp"-->
<!--                android:text="*"-->
<!--                android:id="@+id/bmul"/>-->
<!--            <Button-->
<!--                android:layout_width="75dp"-->
<!--                android:layout_height="75dp"-->
<!--                android:text="0"-->
<!--                android:id="@+id/b0"/>-->
<!--            <Button-->
<!--                android:layout_width="75dp"-->
<!--                android:layout_height="75dp"-->
<!--                android:text="B"-->
<!--                android:id="@+id/bback"/>-->
<!--            <Button-->
<!--                android:layout_width="75dp"-->
<!--                android:layout_height="75dp"-->
<!--                android:text="C"-->
<!--                android:id="@+id/bcancel"/>-->
<!--            <Button-->
<!--                android:layout_width="75dp"-->
<!--                android:layout_height="75dp"-->
<!--                android:text="="-->
<!--                android:id="@+id/beql"/>-->
<!--        </GridLayout>-->


<!--    </LinearLayout>-->

<!--</androidx.constraintlayout.widget.ConstraintLayout>-->
